# daily-journal

./: .env.example  .gitignore  AI_CONTEXT.md  README.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/application/dto/: __init__.py  mood.py  telegram.py
app/application/services/: journal_service.py  mood_service.py  report_service.py  telegram_service.py  user_service.py
app/domain/entities/: __init__.py  journal_entry.py  report.py  user.py
app/domain/interfaces/: __init__.py  journal_repository.py  report_repository.py  user_repository.py
app/domain/value_objects/: __init__.py
app/infrastructure/database/: models.py  session.py
app/infrastructure/repositories/: __init__.py  journal_repository.py  report_repository.py  user_repository.py
app/infrastructure/telegram/: __init__.py  bot_api.py
app/presentation/: __init__.py
app/presentation/api/: __init__.py  journal_router.py  report_router.py
app/presentation/telegram/: __init__.py  router.py
app/shared/: config.py  exceptions.py  logging.py
docs/: DEPLOYMENT.md  DEVELOPMENT_WORKFLOW.md
docs/releases/: v1.md
migrations/: README  env.py
migrations/versions/: 202606180001_create_users_and_journal_entries.py  202606180002_create_reports.py  202606190001_add_journal_query_indexes.py
tests/integration/: conftest.py  test_health.py  test_journal_api.py  test_journal_repository.py  test_report_api.py  test_telegram_webhook.py  test_user_repository.py
tests/unit/: test_config.py  test_mood_service.py
